# Starlings

./: .gitignore  README.md  index.html
Code/: CMakeLists.txt
Code/include/: Octree.h  bird.h  flock.h  simulTimer.h
Code/shaders_objects/: ColorFragmentShader.fragmentshader  TransformVertexShader.vertexshader
Code/src/: bird.cpp  flock.cpp  main.cpp  shader.cpp  simulTimer.cpp  texture.cpp
boids_examples/boids/: CMakeLists.txt
docs/: Doxyfile
docs/html/: Octree_8h.html  Octree_8h__dep__incl.map  Octree_8h__dep__incl.md5  Octree_8h__incl.map  Octree_8h__incl.md5  Octree_8h_source.html  annotated.html  bird_8cpp.html  bird_8cpp__incl.map  bird_8cpp__incl.md5  bird_8h.html  bird_8h__dep__incl.map  bird_8h__dep__incl.md5  bird_8h__incl.map  bird_8h__incl.md5  bird_8h_source.html  classBird-members.html  classBird.html  classFlock-members.html  classFlock.html  classFlock__coll__graph.map  classFlock__coll__graph.md5  classOctree-members.html  classOctree.html  classOctree_1_1Callback-members.html  classOctree_1_1Callback.html  classOctree_1_1Iterator-members.html  classOctree_1_1Iterator.html  classOctree_1_1Iterator__coll__graph.map  classOctree_1_1Iterator__coll__graph.md5  classOctree__coll__graph.map  classOctree__coll__graph.md5  classes.html  classsimulTimer-members.html  classsimulTimer.html  dir_000001_000002.html  dir_23fdee2f6995db16c755697cdf620cf4.html  dir_23fdee2f6995db16c755697cdf620cf4_dep.map  dir_562250f81d431c2e4bf06f5f84066d42.html  dir_562250f81d431c2e4bf06f5f84066d42_dep.map  (+62 more)
docs/latex/: Octree_8h.tex  Octree_8h__dep__incl.md5  Octree_8h__incl.md5  annotated.tex  bird_8cpp.tex  bird_8cpp__incl.md5  bird_8h.tex  bird_8h__dep__incl.md5  bird_8h__incl.md5  classBird.tex  classFlock.tex  classFlock__coll__graph.md5  classOctree.tex  files.tex  (+38 more)
(+72 files in other folders)
